[package]
name = "kens_rs"
version = "0.1.0"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kens_rs"
path = "src/lib.rs"

[dependencies]
byteorder = "1.3.4"
num-traits = "0.2"
multiset = "0.0.5"